[gd_scene load_steps=5 format=2]

[ext_resource path="res://Components/Sprites/Futball_ball.png" type="Texture" id=1]
[ext_resource path="res://Components/Ball/Ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.07107

[sub_resource type="CircleShape2D" id=3]
radius = 18.0

[node name="Ball" type="RigidBody2D"]
collision_mask = 14
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 3.0
angular_damp = 100.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Detector" type="Area2D" parent="."]
collision_mask = 14

[node name="Detector Shape" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
